[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypes"
version = "0.3.0"
description = "Structured research and development pipelining tool with typed steps and artifact resolvers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dill>=0.3.8",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pandas>=2.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
viz = ["flet>=0.80.5"]

[project.scripts]
pypes = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pypes*"]
